<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/tvAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/creado_por"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivAutor"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/foto_autor"
        android:src="@drawable/mi_foto"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAutor" />

    <Button
        android:id="@+id/btnWeb"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/ir_al_sitio"
        android:backgroundTint="#BB86FC"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/ivAutor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSoporte"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/obtener_soporte"
        android:backgroundTint="#BB86FC"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/btnWeb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/volver"
        android:backgroundTint="#BB86FC"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/btnSoporte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
